--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -40,7 +40,7 @@ title: Welcome to Prospxt
     .wrapper
       %h3 Features
       .tabs-container
-        %ul
+        %ul#info-nav
           %li
             = link_to 'Lead Gen', '#', class: 'tab active', target: '1'
           %li
@@ -48,50 +48,42 @@ title: Welcome to Prospxt
           %li
             = link_to 'Promotion', '#', class: 'tab', target: '3'
         #tab1.content
-          %figure
-            %h4 Get accurate, customziable leads delivered to your inbox or CRM as often as you like.
-            %p We research and provide customized contacts based on your growth goals, product and target audience. Leads are unique to your business.
-            %dl
-              %dt Custom research
-              %dd Our blend of tech and people, build custom contact lists on the fly.
-            %dl
-              %dt Plug &amp; play data
-              %dd Data is imported to any CRM or automation tool as often as you need new contacts.
-            %dl
-              %dt Pay as you go
-              %dd Plans are built for scrapp startups and emerging enterprises, who need flexibility.
-          %figure
-            = image_tag 'http://placekitten.com/g/900/900'
-        #tab2.content{style: 'display:none'}
-          %figure
-            %h4 Accelerate awareness, inbound traffic and thought leadership with content in the right places.
-            %p Referral traffic is the cheapest acquistion channel in the game. We plan, develop and distribute your content to the right channels.
-            %dl
-              %dt Press Lists
-              %dd We generate fresh contacts weekly based on your custom goals and product.
-            %dl
-              %dt Guest Posts
-              %dd Our SDRR team manages cold outreach to your top contacts through drip campaigns.
-            %dl
-              %dt Content Promotion
-              %dd Analytics provide insights to potpimize value props, sales cycle and product fit.
-          %figure
-            = image_tag 'http://placekitten.com/g/900/900'
-        #tab3.content{style: 'display:none'}
-          %figure
-            %h4 We accelerate revenue and build early traction with turnkey sales development services.
-            %p Cold prospecting is the most time consuming but cost effective growth strategy. We scale your outbound lead gen process faster than hiring.
-            %dl
-              %dt Lead generation
-              %dd We generate fresh contacts weekly based on your custom goals and product.
-            %dl
-              %dt Cold prospecting
-              %dd Our SDR team manages cold outreach to your top contacts through drip campaigns.
-            %dl
-              %dt Sales Analysis
-              %dd Analytics provide insights to potpimize value props, sales cycle and product fit.
-          %figure
-            = image_tag 'http://placekitten.com/g/900/900'
+          %h4 Get accurate, customziable leads delivered to your inbox or CRM as often as you like.
+          %p We research and provide customized contacts based on your growth goals, product and target audience. Leads are unique to your business.
+          %dl
+            %dt Custom research
+            %dd Our blend of tech and people, build custom contact lists on the fly.
+          %dl
+            %dt Plug &amp; play data
+            %dd Data is imported to any CRM or automation tool as often as you need new contacts.
+          %dl
+            %dt Pay as you go
+            %dd Plans are built for scrapp startups and emerging enterprises, who need flexibility.
+
+        #tab2.content{style: 'opacity: 0'}
+          %h4 Accelerate awareness, inbound traffic and thought leadership with content in the right places.
+          %p Referral traffic is the cheapest acquistion channel in the game. We plan, develop and distribute your content to the right channels.
+          %dl
+            %dt Press Lists
+            %dd We generate fresh contacts weekly based on your custom goals and product.
+          %dl
+            %dt Guest Posts
+            %dd Our SDRR team manages cold outreach to your top contacts through drip campaigns.
+          %dl
+            %dt Content Promotion
+            %dd Analytics provide insights to potpimize value props, sales cycle and product fit.
+        #tab3.content{style: 'opacity: 0'}
+          %h4 We accelerate revenue and build early traction with turnkey sales development services.
+          %p Cold prospecting is the most time consuming but cost effective growth strategy. We scale your outbound lead gen process faster than hiring.
+          %dl
+            %dt Lead generation
+            %dd We generate fresh contacts weekly based on your custom goals and product.
+          %dl
+            %dt Cold prospecting
+            %dd Our SDR team manages cold outreach to your top contacts through drip campaigns.
+          %dl
+            %dt Sales Analysis
+            %dd Analytics provide insights to potpimize value props, sales cycle and product fit.
 
 %section.testimonial
   %article
