--- a/source/stylesheets/components/_tabs.sass
+++ b/source/stylesheets/components/_tabs.sass
@@ -1,8 +1,10 @@
 .tabs-container
-  margin-bottom: rem(150)
-  // +media($medium)
-  //   +span-columns(10)
-  //   +shift(1)
+  position: relative
+  height: rem(600)
+  +clearfix
+  +media($medium)
+    +span-columns(10)
+    +shift(1)
   ul
     list-style: none
     margin: rem(60) 0
@@ -17,7 +19,6 @@
       a
         text-decoration: none
         color: lighten(#646464, 10%)
-        border-radius: rem(1000)
         background: lighten(#646464, 55%)
         padding: rem(5) rem(20)
         &.tab.active
@@ -26,20 +27,18 @@
           color: darken($green, 15%)
           border-bottom: solid $green rem(2)
   .content
-    figure
-      margin: 0
-      &:nth-of-type(1)
-        +media($medium)
-          +span-columns(8)
-      &:nth-of-type(2)
-        +media($medium)
-          +span-columns(4)
-      img
-        width: 100%
-      h4
-        font:
-          size: rem(32)
-      p
-        font:
-          size: rem(20)
-        line-height: rem(35)
+    position: absolute
+    width: 100%
+    img
+      width: 100%
+    h4
+      font:
+        size: rem(32)
+      text-align: center
+      max-width: rem(800)
+      margin: 0 auto
+    p
+      font:
+        size: rem(20)
+      line-height: rem(35)
+      text-align: center
