--- a/source/pricing.html.haml
+++ b/source/pricing.html.haml
@@ -2,9 +2,9 @@
 title: Prospxt | Pricing
 ---
 %section.pricing
+  %h2 Pricing right for you.
   %article
     .wrapper
-      %h2 Pricing right for you.
       %dl
         %dd
           %h3 We make growth easy.
@@ -16,10 +16,12 @@ title: Prospxt | Pricing
             %br
             = link_to 'Start for free', '#', class: 'ui modal-btn button'
         %dd
-          %h3 Cold Prospecting On-demand
+          %h3 Prospecting On-demand
           %h5 $749
           %p
-            Need more leads? Want to pay per performance?
+            Need more leads?
+            %br
+            Want to pay per performance?
             %br
             = link_to 'Contact Us', '#', class: 'button'
 
