--- a/source/refills/_nav.html.haml
+++ b/source/refills/_nav.html.haml
@@ -4,7 +4,7 @@
       = image_tag 'images/prospxt.png'
     %ul
       %li
-        = link_to 'Features', '#features'
+        = link_to 'Features', '/#features'
       %li
         = link_to 'Pricing', 'pricing.html'
       %li
