--- a/source/refills/_footer.html.haml
+++ b/source/refills/_footer.html.haml
@@ -3,10 +3,10 @@
     %li
       &copy; 2015 Prospxt &nbsp; &nbsp; &#124; &nbsp;
     %li
-      = link_to 'Features', 'features.html'
+      = link_to 'Features', '/#features'
     %li
       = link_to 'Pricing', 'pricing.html'
     %li
       = link_to 'Contact', 'contact.html'
-    %li
-      = link_to '@prospxt', '#'
+    -# %li
+    -#   = link_to '@prospxt', '#'
