--- a/source/refills/_nav.html.haml
+++ b/source/refills/_nav.html.haml
@@ -8,4 +8,4 @@
       %li
         = link_to 'Pricing', 'pricing.html'
       %li
-        = link_to 'Contact', '#contact'
+        = link_to 'Contact', 'mailto:justin@scoutnxt.com'
