Switches to hubspot forms

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -7,7 +7,7 @@ title: Welcome to Prospxt
     .wrapper
       %h1 Accelerate early traction
       %h2 We help startups generate new users faster and cheaper.
-      = link_to 'Start for free', '#', class: 'ui modal-btn button'
+      = link_to 'Start for free', '#', class: 'ui signup-btn button'
       %figure
         = link_to '#how' do
           .circle
@@ -90,6 +90,6 @@ title: Welcome to Prospxt
     .wrapper
       %h3
         We helped Breezy HR grow 100% in 30 days.
-      = link_to 'Start for free', '#', class: 'ui modal-btn button white'
+      = link_to 'Start for free', '#', class: 'ui signup-btn button white'
 
-= partial 'refills/modal'
+= partial 'refills/signup-modal'
