--- a/source/pricing.html.haml
+++ b/source/pricing.html.haml
@@ -14,7 +14,7 @@ title: Prospxt | Pricing
             %br
             Want to see what leads look like?
             %br
-            = link_to 'Start for free', '#', class: 'ui modal-btn button'
+            = link_to 'Start for free', '#', class: 'ui signup-btn button'
         %dd
           %h3 Prospecting On-demand
           %h5 $749
@@ -23,6 +23,7 @@ title: Prospxt | Pricing
             %br
             Want to pay per performance?
             %br
-            = link_to 'Contact Us', '#', class: 'button'
+            = link_to 'Contact Us', '#', class: 'contact-btn button'
 
-= partial 'refills/modal'
+= partial 'refills/signup-modal'
+= partial 'refills/contact-modal'
