--- a/source/refills/_nav.html.haml
+++ b/source/refills/_nav.html.haml
@@ -2,6 +2,7 @@
   .wrapper
     = link_to '/' do
       = image_tag 'images/prospxt.png'
+      -# = image_tag 'images/prospxt_icon.png'
     %ul
       %li
         = link_to 'Features', '/#features'
