--- a/source/stylesheets/components/_nav.sass
+++ b/source/stylesheets/components/_nav.sass
@@ -8,6 +8,9 @@ nav
   z-index: 1
   img
     height: rem(35)
+    vertical-align: center
+    &:nth-of-type(2)
+      margin-left: rem(8)
   ul
     margin: 0
     float: right
