--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -7,7 +7,7 @@ title: Welcome to Prospxt
     .wrapper
       %h1 Accelerate early traction
       %h2 We help startups generate new users faster and cheaper.
-      = link_to 'Start for free', '#', class: 'ui signup-btn button'
+      = link_to 'Get Beta Invite', '#', class: 'ui signup-btn button'
       %figure
         = link_to '#how' do
           .circle
@@ -16,7 +16,7 @@ title: Welcome to Prospxt
 %section#how.how
   %article
     .wrapper
-      %h3 We generate leads, sign ups, and opportunities.
+      %h3 Turnkey sales automation for a more effective top of the funnel.
       %ul
         %li
           = image_tag 'images/icon-1.png'
@@ -38,7 +38,7 @@ title: Welcome to Prospxt
 %section#features.features
   %article
     .wrapper
-      %h3 Features
+      %h3 Sales Acceleration Workflows
       .tabs-container
         %ul#info-nav
           %li
@@ -46,44 +46,44 @@ title: Welcome to Prospxt
           %li
             = link_to 'Sales Dev', '#', class: 'tab', target: '2'
           %li
-            = link_to 'Promotion', '#', class: 'tab', target: '3'
+            = link_to 'Inbound', '#', class: 'tab', target: '3'
         #tab1.content
-          %h4 Get accurate, customziable leads delivered to your inbox or CRM as often as you like.
-          %p We research and provide customized contacts based on your growth goals, product and target audience. Leads are unique to your business.
+          %h4 Get custom, accurate prospects delivered to your account, inbox or CRM as often as you like.
+          %p We research and enrich a contact database based on your growth goals and target audience. Prospects are unique to your business and you keep 'em.
           %dl
             %dt Custom research
             %dd Our blend of tech and people, build custom contact lists on the fly.
           %dl
             %dt Plug &amp; play data
-            %dd Data is imported to any CRM or automation tool as often as you need new contacts.
+            %dd Import to any CRM or automation tool as often as you need new contacts.
           %dl
             %dt Pay as you go
-            %dd Plans are built for scrapp startups and emerging enterprises, who need flexibility.
+            %dd Flexible plans are built for scrappy startups and emerging enterprises.
 
         #tab2.content{style: 'opacity: 0'}
-          %h4 Accelerate awareness, inbound traffic and thought leadership with content in the right places.
-          %p Referral traffic is the cheapest acquistion channel in the game. We plan, develop and distribute your content to the right channels.
-          %dl
-            %dt Press Lists
-            %dd We generate fresh contacts weekly based on your custom goals and product.
-          %dl
-            %dt Guest Posts
-            %dd Our SDRR team manages cold outreach to your top contacts through drip campaigns.
-          %dl
-            %dt Content Promotion
-            %dd Analytics provide insights to potpimize value props, sales cycle and product fit.
-        #tab3.content{style: 'opacity: 0'}
-          %h4 We accelerate revenue and build early traction with turnkey sales development services.
-          %p Cold prospecting is the most time consuming but cost effective growth strategy. We scale your outbound lead gen process faster than hiring.
+          %h4 Automate the top of your funnel with a structured sales process for outbound email and calling.
+          %p Cold prospecting is time consuming, we connect your account team to customers sooner. We’ll scale your outbound lead gen process fast and for less than hiring 1 rep.
           %dl
             %dt Lead generation
             %dd We generate fresh contacts weekly based on your custom goals and product.
           %dl
             %dt Cold prospecting
-            %dd Our SDR team manages cold outreach to your top contacts through drip campaigns.
+            %dd Our SDR team manages cold outreach to your top contacts through drip campaigns and calls.
           %dl
             %dt Sales Analysis
-            %dd Analytics provide insights to potpimize value props, sales cycle and product fit.
+            %dd Reporting and analytics provide insights to optimize your value prop, sales cycle and product fit.
+        #tab3.content{style: 'opacity: 0'}
+          %h4 Accelerate awareness, inbound traffic and thought leadership with content in the right places.
+          %p We plan, develop and distribute your content to the right media outlets. Referral traffic is the most effective acquisition channel in the game.
+          %dl
+            %dt Press Lists
+            %dd Identify press and outlets that publish stories related to your app, industry or founders.
+          %dl
+            %dt PR Campaigns
+            %dd Send and track better pitch emails direct to custom press lists to increase opportunities.
+          %dl
+            %dt Opportunities
+            %dd Get press opportunities, guest posts and content opportunities sent to you.
 
 %section.testimonial
   %article
