--- a/source/pricing.html.haml
+++ b/source/pricing.html.haml
@@ -7,23 +7,19 @@ title: Prospxt | Pricing
     .wrapper
       %dl
         %dd
-          %h3 We make growth easy.
+          %h3 Data On-Demand
           %h5 $249
           %p
-            Get 300 customized leads every month.
+            Get 300 custom, accurate prospects delivered monthly. Want to see what prospects look like?
             %br
-            Want to see what leads look like?
-            %br
-            = link_to 'Start for free', '#', class: 'ui signup-btn button'
+            = link_to 'Get Beta Access', '#', class: 'ui signup-btn button'
         %dd
-          %h3 Prospecting On-demand
+          %h3 Growth On-Demand
           %h5 $749
           %p
-            Need more leads?
+            Automate the top of your funnel with a structured sales process Outbound email, Outbound calling, CRM & Gmail Integration
             %br
-            Want to pay per performance?
-            %br
-            = link_to 'Contact Us', '#', class: 'contact-btn button'
+            = link_to 'Get a Demo', '#', class: 'contact-btn button'
 
 = partial 'refills/signup-modal'
 = partial 'refills/contact-modal'
