--- a/source/stylesheets/pages/_pricing.sass
+++ b/source/stylesheets/pages/_pricing.sass
@@ -29,6 +29,7 @@
         display: inline-block
         +media($medium)
           +span-columns(6)
+          min-height: rem(460)
         h3
           font:
             size: rem(30)
