--- a/source/refills/_signup-modal.html.haml
+++ b/source/refills/_signup-modal.html.haml
@@ -1,6 +1,7 @@
 .ui.signup.modal.small
   %i.close.icon
   .content
+    %h5 Get Beta Access
     /[if lte IE 8]
       <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2-legacy.js"></script>
     %script{:charset => "utf-8", :src => "//js.hsforms.net/forms/v2.js", :type => "text/javascript"}
