Fixes actions div of modal

--- a/source/stylesheets/components/_modal.sass
+++ b/source/stylesheets/components/_modal.sass
@@ -13,3 +13,8 @@
     li
       +media($medium)
         +span-columns(6)
+  .actions
+    background: transparent
+    border: 0
+    padding: 0
+    margin-top: rem(15)
