--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -33,7 +33,7 @@ title: Welcome to Prospxt
       .divider-container
         %h4
           Flexible, pay as you go pricing.
-        = link_to 'See pricing', '#', class: 'button'
+        = link_to 'See pricing', '/pricing.html', class: 'button'
 
 %section#features.features
   %article
