--- a/source/refills/_footer.html.haml
+++ b/source/refills/_footer.html.haml
@@ -7,6 +7,6 @@
     %li
       = link_to 'Pricing', 'pricing.html'
     %li
-      = link_to 'Contact', 'contact.html'
+      = link_to 'Contact', 'mailto:justin@scoutnxt.com'
     -# %li
     -#   = link_to '@prospxt', '#'
