--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -16,7 +16,7 @@ title: Welcome to Prospxt
 %section#how.how
   %article
     .wrapper
-      %h3 Turnkey sales automation for a more effective top of the funnel.
+      %h3 Turnkey sales automation for a more effective funnel.
       %ul
         %li
           = image_tag 'images/icon-1.png'
@@ -90,6 +90,6 @@ title: Welcome to Prospxt
     .wrapper
       %h3
         We helped Breezy HR grow 100% in 30 days.
-      = link_to 'Start for free', '#', class: 'ui signup-btn button white'
+      = link_to 'Get Beta Invite', '#', class: 'ui signup-btn button white'
 
 = partial 'refills/signup-modal'
