--- a/source/pricing.html.haml
+++ b/source/pricing.html.haml
@@ -17,7 +17,7 @@ title: Prospxt | Pricing
           %h3 Growth On-Demand
           %h5 $749
           %p
-            Automate the top of your funnel with a structured sales process Outbound email, Outbound calling, CRM & Gmail Integration
+            Automate the top of your funnel with a structured sales process. Outbound calling, CRM & Gmail Integration
             %br
             = link_to 'Get a Demo', '#', class: 'contact-btn button'
 
