--- a/source/refills/_footer.html.haml
+++ b/source/refills/_footer.html.haml
@@ -8,5 +8,5 @@
       = link_to 'Pricing', 'pricing.html'
     %li
       = link_to 'Contact', 'mailto:justin@scoutnxt.com'
-    -# %li
-    -#   = link_to '@prospxt', '#'
+    %li
+      = link_to '@prospxt', '//twitter.com/prospxt', target: "_blank"
