--- a/source/refills/_nav.html.haml
+++ b/source/refills/_nav.html.haml
@@ -8,5 +8,5 @@
         = link_to 'Features', '/#features'
       %li
         = link_to 'Pricing', 'pricing.html'
-      %li
-        = link_to 'Contact', 'mailto:justin@scoutnxt.com'
+      -# %li
+      -#   = link_to 'Contact', 'mailto:justin@scoutnxt.com'
