--- a/source/pricing.html.haml
+++ b/source/pricing.html.haml
@@ -10,14 +10,14 @@ title: Prospxt | Pricing
           %h3 Data On-Demand
           %h5 $249
           %p
-            Get 300 custom, accurate prospects delivered monthly. Want to see what prospects look like?
+            Get custom, accurate prospects delivered monthly. Want to see what prospects look like?
             %br
             = link_to 'Get Beta Access', '#', class: 'ui signup-btn button'
         %dd
           %h3 Growth On-Demand
           %h5 $749
           %p
-            Automate the top of your funnel with a structured sales process. Outbound calling, CRM & Gmail Integration
+            Automate the top of your funnel with a structured sales process. Outbound email, calling, CRM & Gmail Integration
             %br
             = link_to 'Get a Demo', '#', class: 'contact-btn button'
 
