--- a/source/stylesheets/components/_layout.sass
+++ b/source/stylesheets/components/_layout.sass
@@ -12,7 +12,7 @@
     padding: 0
 
 .hero
-  background: url('/images/hero.jpg') left center
+  background: url('../images/hero.jpg') left center
   background-size: cover
   height: 100vh
   width: 100%
@@ -147,7 +147,7 @@
       color: lighten($light-gray, 15%)
 
 .testimonial
-  background: url('/images/hero2.jpg') top center
+  background: url('../images/hero2.jpg') top center
   background-size: cover
   height: rem(600)
   width: 100%
