Update footer copy.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -89,7 +89,7 @@ title: Welcome to Prospxt
   %article
     .wrapper
       %h3
-        We helped Breezy HR grow 100% in 30 days.
+        Custom data, outbound sales and inbound leads.
       = link_to 'Get Beta Invite', '#', class: 'ui signup-btn button white'
 
 = partial 'refills/signup-modal'
