--- a/source/refills/_footer.html.haml
+++ b/source/refills/_footer.html.haml
@@ -7,6 +7,8 @@
     %li
       = link_to 'Pricing', 'pricing.html'
     %li
+      = link_to 'Resources', 'http://blog.prospxt.com'
+    %li
       = link_to 'Contact', 'mailto:justin@prospxt.com'
     %li
       = link_to '@prospxt', '//twitter.com/prospxt', target: "_blank"
