Update pricing copy

--- a/source/pricing.html.haml
+++ b/source/pricing.html.haml
@@ -7,12 +7,12 @@ title: Prospxt | Pricing
     .wrapper
       %dl
         %dd
-          %h3 Data On-Demand
-          %h5 $249
+          %h3 Data + Email
+          %h5 $400
           %p
-            Get custom, accurate prospects delivered monthly. Want to see what prospects look like?
+            Search for companies, verified contacts and automate personal email. Want to see what contacts look like?
             %br
-            = link_to 'Get Beta Access', '#', class: 'ui signup-btn button'
+            = link_to 'Start for Free', 'https://app.prospxt.com/Account/Register', class: 'ui button'
         %dd
           %h3 Growth On-Demand
           %h5 $749
