Change beta link to sign up link

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -7,7 +7,7 @@ title: Welcome to Prospxt
     .wrapper
       %h1 Accelerate early traction
       %h2 We help startups generate new users faster and cheaper.
-      = link_to 'Get Beta Invite', '#', class: 'ui signup-btn button'
+      = link_to 'Start for Free', 'https://app.prospxt.com/Account/Register', class: 'ui button'
       %figure
         = link_to '#how' do
           .circle
@@ -90,6 +90,6 @@ title: Welcome to Prospxt
     .wrapper
       %h3
         Custom data, outbound sales and inbound leads.
-      = link_to 'Get Beta Invite', '#', class: 'ui signup-btn button white'
+      = link_to 'Start for Free', 'https://app.prospxt.com/Account/Register', class: 'ui button white'
 
 = partial 'refills/signup-modal'
