Change main CTA button copy and added modal back

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -7,7 +7,7 @@ title: Welcome to Prospxt
     .wrapper
       %h1 Accelerate early traction
       %h2 We help startups generate new users faster and cheaper.
-      = link_to 'Start for Free', 'https://app.prospxt.com/Account/Register', class: 'ui button'
+      = link_to 'Sign up for Beta', '#', class: 'ui signup-btn button'
       %figure
         = link_to '#how' do
           .circle
